# fyrer

./: .env.test  .gitignore  Cargo.toml  README.md  fyrer.example.yml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  fs.rs  lib.rs  tasks.rs
crates/dev/: Cargo.toml
crates/dev/src/: lib.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: config.rs  graph.rs  lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/fyrer/: Cargo.toml
crates/fyrer/src/: main.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
src/: config.rs  env_parser.rs  error.rs  kill_process.rs  main.rs  print_banner.rs  runner.rs  spawn_service.rs  watcher.rs
src/cli/: logger.rs  mod.rs  print_banner.rs
src/config/: mod.rs  parser.rs  types.rs
src/core/: mod.rs  project.rs  projects.rs  task.rs
src/env/: loader.rs
src/logger/: log.rs  mod.rs
src/utils/: env.rs
