[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Calc <hello@vinm.me>"]
license = "MIT"
repository = "https://github.com/07calc/fyrer"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
