[package]
name = "fyrer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fyrer-core = {path = "../core/"}
fyrer-graph = {path = "../graph/"}
fyrer-error = { path = "../error/" }
anyhow.workspace = true


